# quikc

./: .gitignore  Build.toml  Cargo.toml  LICENSE  README.md  benchmark.sh  build.sh  gendeps.py  quikc-init  startup-init  test.sh
benchmark/: Build.toml
benchmark/include/mcvk/: color.h  device.hpp  global.hpp  logger.hpp  physicaldeviceinfo.hpp  queue.hpp  swapchain.hpp  types.hpp  validationlayers.hpp  vkcomponents.hpp  window.hpp
benchmark/src/: device.cpp  init.cpp  logger.cpp  queue.cpp  swapchain.cpp  vkcomponents.cpp  window.cpp
src/: assembler.rs  benchmark.rs  build.rs  buildtable.rs  compiler.rs  defaultbuild.rs  example.rs  linker.rs  logger.rs  main.rs  test.rs  version.rs  walker.rs
testdir/: alt.cpp  alt.h  alt2.cpp  main.c  main.cpp
testfiles/: Build.toml  dep.c  hi.c  hi.h  main.c
testfiles/config/: Build.toml
testfiles/invalid/: invalid.c
testfiles/nondeps/: hi.c  main.c
