[package]
name = "quikc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true
panic = "abort"
strip = "symbols"

[dependencies]
rayon = "1.6"
color-print = "0.3.4"
toml = "0.5.10"
serde = "1.0"
serde_derive = "1.0"
jwalk = "0.1.0"