[package]
name = "quikc"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true
panic = "abort"
strip = "symbols"
codegen-units = 1

[dependencies]
rayon = "1.6"
color-print = "0.3.4"
toml = "0.5.10"
serde = "1.0"
serde_derive = "1.0"
walkdir = "2.3.2"
bitflags = "1.3.2"
const_format = "0.2.30"
once_cell = "1.17.0"

[dev-dependencies]
filetime = "0.2.19"
statistical = "1.0.0"
once_cell = "1.17.0"
regex = "1.7.1"

[features]
quikc-nightly = []